<!--
*         Name: Paul Harnack
*    Id Number: 1818051
*        Email: harna100@mail.chapman.edu
*       Course: CPSC 356 Android Dev
*   Assignment: Tip Calculator
*  Description: String resources for the app
-->

<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="service_rating">Service Rating</string>
    <string name="meal_price">Meal Price</string>
    <string name="tip_price">Tip Price: </string>
    <string name="total_price">Total Price: </string>
    <string name="zero_price">$0.00</string>
    <string name="clear">Clear</string>
</resources>
