<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.chapman.cpsc356.harna100.tipcalculator.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_weight="30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/meal_price"/>
            <EditText
                android:id="@+id/et_price"
                android:layout_weight="70"
                android:layout_width="0dp"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:weightSum="100">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/service_rating"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="10"/>
            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                app:dsb_max="10"
                app:dsb_min="1"
                android:progress="10"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:id="@+id/sb_service_rating"/>
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_price"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/tv_tip_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_price"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_price"
                android:textSize="30sp"/>
        </LinearLayout>


        
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
    </LinearLayout>

</ScrollView>
